refactors blog list to fix layout issues

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -73,10 +73,6 @@ h1 {
 .both {
 }
 
-.blog-link {
-	text-decoration: none;
-}
-
 .blog-block {
 	text-decoration: none;
 	border-left: solid 5px black;
@@ -84,29 +80,37 @@ h1 {
 	border-top: solid 2.5px black;
 	border-bottom: solid 2.5px black;
 	box-sizing: border-box;
-	height: 80px;
 	position: relative;
+	display: block;
+	color: black;
 }
 
-.blog-container:last-child {
+.blog-block:last-child {
 	border-bottom: solid 5px black;
 }
 
 h2 {
 	font-size: 55px;
-	color: black;
-	line-height: 1px;
-	margin-left: 15px;
 	font-family: 'Arvo', serif;
 }
 
+.blog-block h2 {
+	display: inline-block;
+	margin: 0;
+	line-height: 90px;
+	width: 80px;
+	padding: 0 15px;
+}
+
 h4 {
-	margin-left: 120px;
 	font-size: 20px;
-	color: black;
 	font-family: Helvetica, Arial;
-	position: absolute;
-	top: 18px;
+}
+
+.blog-block h4 {
+	display: inline-block;
+	margin: 0;
+	padding-left: 10px;
 }
 
 footer {
